--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=dev_spring
 spring.datasource.password=12345678
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:49154/test
+spring.jpa.show-sql=True
