--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,5 +5,9 @@ spring:
     password: 12345678
     url: jdbc:mysql://${MYSQL_HOST:localhost}:49999/test
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: update
+      
+      
+      
