updating cookie name

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,12 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-      
+
+
+server:
+  servlet:
+    session:
+      cookie:
+        name: ra_id
       
       
